[gd_scene load_steps=10 format=3 uid="uid://bfdg0ifjsi6cb"]

[ext_resource type="FontFile" uid="uid://dsswu3q6cagtk" path="res://assets/fonts/pixelart.ttf" id="1_6o145"]
[ext_resource type="Script" path="res://scenes/10_mainMenu/game_over/gameOverScreen.gd" id="1_7c0y4"]
[ext_resource type="Texture2D" uid="uid://sjsjoeja2oxc" path="res://assets/sprites/GAME_OVER.png" id="2_dsh6c"]
[ext_resource type="Texture2D" uid="uid://c3fb4t4m4r317" path="res://assets/Treasure Hunters/Pirate Treasure/Sprites/Gold Coin/01.png" id="3_5yaut"]
[ext_resource type="Theme" uid="uid://d3jndvb8684gd" path="res://assets/resources/pyrateTheme.tres" id="4_onq8g"]

[sub_resource type="LabelSettings" id="LabelSettings_fv51t"]
font = ExtResource("1_6o145")
font_size = 32
font_color = Color(0.968627, 0.92549, 0.607843, 1)
outline_size = 8
outline_color = Color(0.2, 0.196078, 0.239216, 1)

[sub_resource type="Animation" id="Animation_6mbxq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k234u"]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.419608)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oksg2"]
_data = {
"RESET": SubResource("Animation_6mbxq"),
"fadeIn": SubResource("Animation_k234u")
}

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7c0y4")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -20.0
offset_right = 46.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_dsh6c")

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_5yaut")
stretch_mode = 4

[node name="LabelScore" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " 20"
label_settings = SubResource("LabelSettings_fv51t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ButtonRestart" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_onq8g")
text = "Cargar punto de control"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="ButtonMainMenu" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_onq8g")
text = "MAIN MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oksg2")
}
autoplay = "fadeIn"

[connection signal="pressed" from="VBoxContainer/ButtonRestart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
